# seaturtle_menu

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: worflow.yml
docs/: bullets.rst  index.rst  menu.rst  modules.rst  seaturtle_menu.rst
examples/: basic_menu.py  custom_bullets.py  nested_menu.py
seaturtle_menu/: __init__.py  bullets.py  consts.py  menu.py  utils.py
